# GANs-Data-Diet

./: .gitignore  README.md  hello.py  pyproject.toml  random_subsets.ipynb  vanilla_GAN.ipynb
informed_experiments/100_epoch_cifar_eachclass_easy/models/cifar10_subset_50_percent/: discriminator.pth
informed_experiments/100_epoch_cifar_eachclass_easy/models/cifar10_subset_60_percent/: discriminator.pth
informed_experiments/100_epoch_cifar_eachclass_easy/models/cifar10_subset_70_percent/: discriminator.pth
informed_experiments/100_epoch_cifar_eachclass_easy/models/cifar10_subset_80_percent/: discriminator.pth
informed_experiments/100_epoch_cifar_eachclass_easy/models/cifar10_subset_90_percent/: discriminator.pth
informed_experiments/n_easiest_fashion/models/: mnist_classifier.pth
notebooks/: FID_cifar.ipynb  cifar.ipynb  el2n_calc.ipynb  eval.ipynb  evaluation_results_cifar.csv  evaluation_results_digits.csv  evaluation_results_fashion.csv  random_subsets.ipynb  test.ipynb
notebooks/models/cifar10_subset_100_percent/: discriminator.pth
random_subset_experiments_cifar/models/cifar10_subset_100_percent/: discriminator.pth
random_subset_experiments_cifar/models/cifar10_subset_50_percent/: discriminator.pth
random_subset_experiments_cifar/models/cifar10_subset_60_percent/: discriminator.pth
random_subset_experiments_cifar/models/cifar10_subset_70_percent/: discriminator.pth
random_subset_experiments_cifar/models/cifar10_subset_80_percent/: discriminator.pth
random_subset_experiments_cifar/models/cifar10_subset_90_percent/: discriminator.pth
random_subsets_digits/models/: mnist_classifier.pth
random_subsets_fashion/models/: mnist_classifier.pth
src/: calculate_el2n.py  config.py  gan_experiment.py  main.py  train_classifier.py  train_gan.py
src/configs/: cifar_config.py  mnist_config.py
src/models/: cnn_classifier.py  conv_discirminator.py  conv_generator.py  discriminator.py  generator.py  inception_feature_extractor.py
src/utils/: data_utils.py  eval_utils.py  vizualization.py
(+20 files in other folders)
